Bug 1652849: Use NotifyWhenScriptSafe for some additional observers. r=nika

Differential Revision: https://phabricator.services.mozilla.com/D83845